--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 }
 
 :root {
-  --black: #000;
-  --blue-500: #3b82f6;
-  --neutral-500: #737373;
-  --neutral-700: #404040;
-  --white: #fff;
+  --color-1: #121212;
+  --color-2: #03dac6;
+  --color-3: #121212;
+  --color-4: #1e1e1e;
+  --color-5: #e0e0e0;
 }
 
 html {
@@ -17,15 +17,15 @@ html {
 }
 
 body {
-  background-color: var(--neutral-700);
-  color: var(--white);
+  background-color: var(--color-4);
+  color: var(--color-5);
   font-family: sans-serif;
   font-size: 1rem;
 }
 
 header {
   align-items: center;
-  background-color: var(--black);
+  background-color: var(--color-1);
   column-gap: 1em;
   display: flex;
   height: 100px;
@@ -51,7 +51,7 @@ main {
   margin-inline: auto;
   padding: 1em;
   row-gap: 2em;
-  width: clamp(320px, 90%, 620px);
+  width: clamp(320px, 90%, 780px);
 }
 
 section {
@@ -74,7 +74,7 @@ table {
 }
 
 thead tr {
-  background-color: var(--neutral-500);
+  background-color: var(--color-3);
 }
 
 th,
@@ -85,7 +85,7 @@ td {
 }
 
 tbody td:first-child {
-  color: var(--blue-500);
+  color: var(--color-2);
 }
 
 tbody td:last-child {
@@ -94,7 +94,7 @@ tbody td:last-child {
 
 footer {
   align-items: center;
-  background-color: var(--black);
+  background-color: var(--color-1);
   display: flex;
   justify-content: space-between;
   padding: 1em;
